fixed pledge button visibility issue on Dark theme

--- a/app/assets/stylesheets/base/dark.css.scss
+++ b/app/assets/stylesheets/base/dark.css.scss
@@ -43,7 +43,7 @@
 	//Pledge Promo 
 	.pledge-container {
 		background:none;
-		img {
+		img, .reporter {
 			display:none;
 		}
 		.pledge {
